--- a/wefund/frontend/src/components/content/css/style.css
+++ b/wefund/frontend/src/components/content/css/style.css
@@ -1,10 +1,10 @@
 
-@import url(https://fonts.googleapis.com);
+/*@import url(https://fonts.googleapis.com);
 @import url(https://fonts.gstatic.com);
 @import url(https://fonts.googleapis.com/css2?family=Montserrat&display=swap);
 @import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css);
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css);
-
+*/
 body {
     font-family: 'Montserrat', sans-serif;
     background-color: #FAFAFA;
