--- a/wefund/frontend/src/components/content/css/style.css
+++ b/wefund/frontend/src/components/content/css/style.css
@@ -11,11 +11,11 @@ body {
   }
   
   .bg-yellow {
-    background: #FECE07;
+    background: #28a8e2;
   }
   
   .text-yellow {
-    color: #FECE07;
+    color:#28a8e2;
   }
   
   .bg-grey {
@@ -31,22 +31,28 @@ body {
   }
   
   .active {
-    color: #FECE07 !important;
+    color: #28a8e2 !important;
   }
   
   .btn-shadow {
-    -webkit-box-shadow: 10px 10px #FFE26C !important;
-            box-shadow: 10px 10px #FFE26C !important;
+    -webkit-box-shadow: 10px 10px #28a8e2 !important;
+            box-shadow: 10px 10px #28a8e2 !important;
   }
   
   .brd {
     padding-left: 30px;
-    border-left: 10px solid #FECE07;
+    border-left: 10px solid #28a8e2;
   }
   
   .image {
     background-repeat: no-repeat !important;
     background-position: center !important;
     background-size: cover !important;
+  }
+  .hero{
+    background-repeat: no-repeat !important;
+    background-position: center !important;
+    background-size: cover !important;
+    background-image: url("http://127.0.0.1:8000/static/img/event.jpg");
   }
   /*# sourceMappingURL=style.css.map */
